customers/shipyard-ros2/deploy-v2/force-app/main/default/objects/ohfy__Depletion__c/fields/VIP_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>VIP_Invoice_Number__c</fullName>
    <label>VIP Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>