customers/shipyard-ros2/deploy-v2/force-app/main/default/objects/ohfy__Depletion__c/fields/VIP_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>VIP_Net_Amount__c</fullName>
    <description>Extended net amount (Qty × NetPrice). The revenue line total from VIP SLSDA depletion data.</description>
    <label>VIP Net Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>