customers/shipyard-ros2/deploy-v2/force-app/main/default/objects/ohfy__Depletion__c/fields/VIP_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>VIP_Net_Price__c</fullName>
    <label>VIP Net Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>