customers/shipyard-ros2/deploy-v2/force-app/main/default/objects/ohfy__Depletion__c/fields/VIP_Unit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>VIP_Unit_Quantity__c</fullName>
    <label>VIP Unit Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>